[package]
name = "clone-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["ioctl"] }

[dev-dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
